force-app/main/default/objects/Sanctions_Screening__c/fields/Adjudicated_By__c.field-meta.xml
<CustomField>
    <fullName>Adjudicated_By__c</fullName>
    <label>Adjudicated By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Adjudicated_Screenings</relationshipName>
    <relationshipLabel>Adjudicated Screenings</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who adjudicated a potential/confirmed match (null for an auto-cleared screen).</description>
</CustomField>