force-app/main/default/objects/Sanctions_Screening__c/fields/List_Source__c.field-meta.xml
<CustomField>
    <fullName>List_Source__c</fullName>
    <label>List Source</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Which sanctions list set governed this screen.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>OFAC_SDN</fullName><default>false</default><label>OFAC SDN</label></value>
            <value><fullName>Consolidated</fullName><default>false</default><label>Consolidated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>