force-app/main/default/objects/Sanctions_Screening__c/fields/List_Version__c.field-meta.xml
<CustomField>
    <fullName>List_Version__c</fullName>
    <label>List Version</label>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
    <description>Provider list version / publish date (e.g. OFAC-SDN-2026-06-18) -- pins exactly which list governed this screen.</description>
</CustomField>