force-app/main/default/objects/Sanctions_Screening__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <label>Loan</label>
    <type>Lookup</type>
    <referenceTo>Loan__c</referenceTo>
    <relationshipName>Sanctions_Screenings</relationshipName>
    <relationshipLabel>Sanctions Screenings</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Parent loan being screened. Restrict delete -- an immutable screening receipt cannot be cascade-deleted (ADR-24).</description>
</CustomField>