force-app/main/default/objects/Sanctions_Screening__c/fields/Match_Details__c.field-meta.xml
<CustomField>
    <fullName>Match_Details__c</fullName>
    <label>Match Details</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Provider match candidates and analyst rationale for a clear/confirm/pending decision. Never contains raw or de-tokenized SSN (ADR-24).</description>
</CustomField>