force-app/main/default/objects/Sanctions_Screening__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Outcome of the screen. Gating precondition (ADR-24): only Clear passes to the kernel; Potential_Match / Confirmed_Match / Pending_Review block origination regardless of policy verdict.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Clear</fullName><default>false</default><label>Clear</label></value>
            <value><fullName>Potential_Match</fullName><default>false</default><label>Potential Match</label></value>
            <value><fullName>Confirmed_Match</fullName><default>false</default><label>Confirmed Match</label></value>
            <value><fullName>Pending_Review</fullName><default>false</default><label>Pending Review</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>