force-app/main/default/objects/Sanctions_Screening__c/fields/Screened_At__c.field-meta.xml
<CustomField>
    <fullName>Screened_At__c</fullName>
    <label>Screened At</label>
    <type>DateTime</type>
    <required>true</required>
    <description>When the screen was executed. The newest Screened_At__c for a Loan__c is the current disposition.</description>
</CustomField>